--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <body>
 
-<p><strong>Xiangyu Xu's Homepage</strong></p>
+<title><strong>Xiangyu Xu's Homepage</strong></title>
+<p><strong>I am a junior at University of California, Berkeley.\n
+    I major in Computer Science, Applied Math, and minoring in Data Science. \n
+    My research interest is Computer Architechture. </nav></nav></strong></p>
 
 </body>
 </html>
