--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <body>
 
-<title><strong>Xiangyu Xu's Homepage</strong></title>
-<p><strong>I am a junior at University of California, Berkeley.\n
-    I major in Computer Science, Applied Math, and minoring in Data Science. \n
-    My research interest is Computer Architechture. </nav></nav></strong></p>
+<P><strong>Xiangyu Xu's Homepage</strong></P>
+<p><strong>I am a junior at University of California, Berkeley.</strong></p>
+   <p><strong>I major in Computer Science, Applied Math, and minor in Data Science. </strong></p>
+   <p><strong>My research interest is Computer Architechture. </strong></p>
 
 </body>
 </html>
