--- a/index.html
+++ b/index.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html>
-<title>Xiangyu Xu's Homepage</title>
+<head>
+	<title>Xiangyu Xu's Homepage</title>
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			margin: 0;
+			padding: 0;
+			background-color: #F5F5F5;
+		}
+		.container {
+			max-width: 800px;
+			margin: 0 auto;
+			padding: 20px;
+			background-color: #FFFFFF;
+			box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+		}
+		h1 {
+			font-size: 36px;
+			color: #333333;
+			margin-top: 0;
+		}
+		p {
+			font-size: 18px;
+			line-height: 1.5;
+			color: #666666;
+		}
+		button {
+			background-color: #4CAF50;
+			color: white;
+			border: none;
+			padding: 10px 20px;
+			border-radius: 5px;
+			cursor: pointer;
+		}
+	</style>
+</head>
 <body>
+	<div class="container">
+		<h1>Welcome to Xiangyu homepage</h1>
+		<p>I am a junior at University of California, Berkeley.</p>
+        <p>I major in Computer Science, Applied Math, and minor in Data Science. </p>
+        <p>This Website is still under construction </p>
+		<button onclick="alert('Never! Life is getting endlessly beautiful!')">When Do You Finish?</button>
+	</div>
 
-<P><strong>Xiangyu Xu's Homepage</strong></P>
-<p><strong>I am a junior at University of California, Berkeley.</strong></p>
-   <p><strong>I major in Computer Science, Applied Math, and minor in Data Science. </strong></p>
-   <p><strong>My research interest is Computer Architechture. </strong></p>
-
+	<script>
+		// This is a basic example of a JavaScript function
+        name = 'Xiangyu Xu';
+		function sayHello(name) {
+			alert("Hello, " + name + "!");
+		}
+	</script>
 </body>
 </html>
+
