--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Welcome to Xiangyu homepage</h1>
-		<p>I am a junior at University of California, Berkeley.</p>
+		<h1>Welcome to Xiangyu Xu's homepage</h1>
+		<p>I am a third year undergraduate student at University of California, Berkeley.</p>
         <p>I major in Computer Science, Applied Math, and minor in Data Science. </p>
+		<p>I am interested in the intersection of Computer Architecture and Machine Learning, Digital Design, and Software Engineering.</p>
         <p>This Website is still under construction </p>
 		<button onclick="alert('Never! Life is getting endlessly beautiful!')">When Do You Finish?</button>
 	</div>
